--- a/src/views/demo/proxy.html
+++ b/src/views/demo/proxy.html
@@ -15,7 +15,7 @@
      *  Proxy 不仅可以代理对象，也可以代理数组；还可以代理动态增加的属性如 type 
      * 2. Proxy返回的是一个新对象,我们可以只操作新的对象达到目的,而Object.defineProperty只能遍历对象属性直接修改。
      * 缺点：
-     * 1. 兼容 polyfill 都无法实现
+     * 1. 兼容ie polyfill 都无法实现
     */
     const obj = {}
     const newObj = new Proxy(obj, {
