--- a/src/views/demo/mvvm.html
+++ b/src/views/demo/mvvm.html
@@ -7,22 +7,45 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- view -->
+  <!-- View  -->
   <div id="app">
     {{ message }}
   </div>
   <script src="js/vue.js"></script>
   <script>
-    // 这是我们的Model
-    var exampleData = {
-      message: 'Hello World!'
+  // ViewModel 
+   var app = new Vue({
+    el: '#app',
+    data: {  // 用于描述视图状态   
+        message: 'Hello Vue!', 
+    },
+    methods: {  // 用于描述视图行为  
+        showMessage(){
+            let vm = this;
+            alert(vm.message);
+        }
+    },
+    created(){
+        let vm = this;
+        // Ajax 获取 Model 层的数据
+        ajax({
+            url: '/your/server/data/api',
+            success(res){
+                vm.message = res;
+            }
+        });
     }
-    // 创建一个 Vue 实例或 "ViewModel"
-    // 它连接 View 与 Model
-    new Vue({
-        el: '#app',
-        data: exampleData
-    })
+})
+// Model
+// {
+//     "url": "/your/server/data/api",
+//     "res": {
+//         "success": true,
+//         "name": "IoveC",
+//         "domain": "www.cnblogs.com"
+//     }
+// }
+
 </script>
 </body>
 </html>
